k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gomsg
  namespace: gomsg
  labels:
    name: gomsg
spec:
  strategy:
  type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0%
  selector:
    matchLabels:
      name: gomsg
  template:
    metadata:
      labels:
        name: gomsg
    spec:
      containers:
      - name: gomsg
        image: mcyprian/gomsg:0.0.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 500M
            cpu: 100m
          limits:
            memory: 1000M
            cpu: 300m
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 9
        readinessProbe:
          httpGet:
            path: /backoffice/v1/ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 2
          timeoutSeconds: 2
          failureThreshold: 5
