k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomsg
  namespace: gomsg
spec:
  type: ClusterIP
  selector:
    name: gomsg
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
